// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-function-type.js format 1`] = `
====================================options=====================================
cursorOffset: 14
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type foo = () <|>=> boolean;

=====================================output=====================================
type foo = () <|>=> boolean;

================================================================================
`;

exports[`declare-module-exports.js format 1`] = `
====================================options=====================================
cursorOffset: 22
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module.exports<|>: A;

=====================================output=====================================
declare module.exports<|>: A;

================================================================================
`;

exports[`function-predicate.js format 1`] = `
====================================options=====================================
cursorOffset: 12
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function a()<|>: %checks(a) {}

=====================================output=====================================
function a()<|>: %checks(a) {}

================================================================================
`;

exports[`function-return-type.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function a(): boolean {}

=====================================output=====================================
function a(): boolean {}

================================================================================
`;

exports[`function-return-type-and-predicate.js format 1`] = `
====================================options=====================================
cursorOffset: 12
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function a()<|>: boolean %checks(a) {}

=====================================output=====================================
function a()<|>: boolean %checks(a) {}

================================================================================
`;

exports[`function-type-parameter-bound.js format 1`] = `
====================================options=====================================
cursorOffset: 12
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function a<T<|>: X>() {}

=====================================output=====================================
function a<T<|>: X>() {}

================================================================================
`;

exports[`type-cast-expression.js format 1`] = `
====================================options=====================================
cursorOffset: 2
parsers: ["flow", "babel-flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(a<|>: A);

=====================================output=====================================
(a<|>: A);

================================================================================
`;
